tests/snapshots/e2e__path-lie-default.snap
---
source: tests/e2e.rs
expression: "run(\"path-lie\", &[])"
---
$ stilltrue 
stilltrue: no findings

exit: 0
