tests/snapshots/e2e__sarif-rot.snap
---
source: tests/e2e.rs
expression: "run(\"command-rot\", &[\"--format\", \"sarif\"])"
---
$ stilltrue --format sarif
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "automationDetails": {
        "id": "stilltrue"
      },
      "columnKind": "unicodeCodePoints",
      "originalUriBaseIds": {
        "%SRCROOT%": {
          "description": {
            "text": "The repository root, as discovered by git."
          }
        }
      },
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "CLAUDE.md",
                  "uriBaseId": "%SRCROOT%"
                },
                "region": {
                  "endColumn": 15,
                  "endLine": 1,
                  "startColumn": 6,
                  "startLine": 1
                }
              }
            }
          ],
          "message": {
            "text": "command `make demo` has no target in Makefile — likely broke in <sha> \"split demo into seed+serve\""
          },
          "partialFingerprints": {
            "stilltrue/v1": "<sha>"
          },
          "properties": {
            "suggestions": [
              "seed",
              "serve"
            ]
          },
          "ruleId": "stilltrue/command/rot"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/uk0064/stilltrue",
          "name": "stilltrue",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error"
              },
              "id": "stilltrue/command/rot",
              "name": "CommandRot",
              "properties": {
                "tags": [
                  "documentation",
                  "rot"
                ]
              },
              "shortDescription": {
                "text": "A command named in a document no longer resolves, and history shows it once did."
              }
            }
          ],
          "semanticVersion": "0.1.0",
          "version": "0.1.0"
        }
      }
    }
  ],
  "version": "2.1.0"
}

exit: 1
