tests/snapshots/e2e__suppression-unused-default.snap
---
source: tests/e2e.rs
expression: "run(\"suppression-unused\", &[])"
---
$ stilltrue 
stilltrue: no findings

exit: 0
