tests/snapshots/e2e__suppression-unused-strict.snap
---
source: tests/e2e.rs
expression: "run(\"suppression-unused\", &[\"--strict\"])"
---
$ stilltrue --strict
CLAUDE.md:1:1  lie  suppression covers no claim

stilltrue: 0 rot, 1 lie

exit: 0
